--- a/stringtheory/styles.css
+++ b/stringtheory/styles.css
@@ -14,6 +14,9 @@ h1 {
   text-align: center;  
   font-size: 64px;
   font-weight: 100;
+}
+
+.bio-header {
   grid-area: heading;
 }
 
@@ -177,4 +180,27 @@ input {
 
 .bio-sequence__small .bio-display .bio-name {
   text-align: left;
+}
+
+
+.bio-factions {
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.bio-faction {
+  border: 1px dashed gray;
+  padding: 15px;
+  text-align: center;
+  border-radius: 15px;
+  box-sizing: border-box;
+  text-transform: uppercase;
+}
+
+.bio-faction.is-current {
+  border: 2px solid white;
+  background-color: transparent;
+  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3), inset 0px 0px 20px rgba(255, 255, 255, .3);
+  font-weight: bold;
 }
